--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,9 +188,10 @@ add_executable(tensor_play ${HEADERS} ${PLAY})
 if(LAPACK_FOUND)
   target_link_libraries(tensor_play ${LAPACK_LIBRARIES})
 endif()
-if(CBLAS_FOUND)
-  target_link_libraries(tensor_play ${CBLAS_LIBRARIES})
-endif()
+target_link_libraries(tensor_play -lblas -lcblas)
+#if(CBLAS_FOUND)
+#  target_link_libraries(tensor_play ${CBLAS_LIBRARIES})
+#endif()
 
 if(NOT MSVC)
   add_executable(vmmlib_test ${HEADERS} ${TESTS})
