--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ include(FindPackages)
 include(CheckLibraryExists)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-shadow -Wno-sign-compare -Wno-extra -Wno-strict-aliasing")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wno-shadow -Wno-sign-compare -Wno-extra -Wno-strict-aliasing")
 endif()
 
 include_directories(BEFORE ${CMAKE_SOURCE_DIR}/include)
